v1.3.0/product-specifications/core-functions/5.-issue-certificate.md
# 5. Issue certificate

As a legal document, it is important that we track that the vital event certificate has ben issued to the informant so that there is a log of this action having occurred. OpenCRVS allows certificates to be printed off in advance of collection to support Registration Office practices where there is a certificate collection on a specific day of the week for informants.

Certificates printed off in advance show in the Ready to issue workqueue so that on collections the Registrar or Registration Agent can log that the certificate has been issued.

### **Configuration options:**

* Enable/disable printing off in advance of issuance

### **Pre-condition**

A record is in the Ready for Issue workqueue with the status ‘Certified’

### **Triggers**

Informant has come to the Registration Office to collect their certificate which has been printed off in advance

### **Standard flow**

1. Registrar or Registration Agent navigates to the Ready to Issue workqueue
2. User assigns themselves to a record
3. Record is downloaded and is now available to be issued offline
4. User clicks “Review”
5. User selects who is collecting the certificate
   1. For a birth record this could be the Mother, Father or Informant
   2. If Someone else is collecting the certificate. Then the user captures their details.
6. User checks the collectors ID against the details captured in the record
7. User confirms the collectors proof of ID match
   1. If they don’t the user is warned that by proceed, they will be responsible for issuing a certificate without the necessary proof of ID from the collector
8. User is prompted to collect payment if fess are required (based on system configuration)
9. User clicks “Issue”
10. User is navigated back to Ready to issue workqueue
11. Record is sent to the Outbox for processing
12. Once processed the record status is updated to ‘Issued’

### **Post conditions**

* Record is removed from all workqueues but can be search for using tracking id, reg no. etc.
* Record audit is updated to show that the record has been ‘Issued’

{% embed url="https://www.loom.com/share/982516ba4170457984bca4a393eeff72?sid=4ac42dfd-8e0a-407f-8e8a-2b748de41fc7" %}
